@@ -26,20 +26,16 @@
 # Enabled components.
 export DIALOG_SELECTABLE_AWSTATS='YES'
 export DIALOG_SELECTABLE_FAIL2BAN='YES'
-export DIALOG_SELECTABLE_SOGO='NO'
+export DIALOG_SELECTABLE_SOGO='YES'
 
-if [ X"${DISTRO}" == X'RHEL' ]; then
-    [ X"${DISTRO_VERSION}" == X'6' ] && export DIALOG_SELECTABLE_SOGO='YES'
-elif [ X"${DISTRO}" == X'DEBIAN' ]; then
-    export DIALOG_SELECTABLE_SOGO='YES'
-elif [ X"${DISTRO}" == X'UBUNTU' ]; then
-    export DIALOG_SELECTABLE_SOGO='YES'
+if [ X"${DISTRO}" == X'UBUNTU' ]; then
+    [ X"${DISTRO_CODENAME}" != X'trusty' ] && export DIALOG_SELECTABLE_SOGO='NO'
 elif [ X"${DISTRO}" == X'FREEBSD' ]; then
     export DIALOG_SELECTABLE_FAIL2BAN='NO'
+    export DIALOG_SELECTABLE_SOGO='NO'
 elif [ X"${DISTRO}" == X'OPENBSD' ]; then
     # No sql/ldap auth module for Nginx.
     export DIALOG_SELECTABLE_AWSTATS='NO'
-    export DIALOG_SELECTABLE_SOGO='YES'
 fi
 
 # Construct dialog menu list
