@@ -14,7 +14,7 @@
     //MySQL4DebugEnabled = YES;
     //PGDebugEnabled = YES;
 
-    // Require at least SOGo-2.2.18.
+    // Require at least SOGo-2.3.0
     //SOGoEASDebugEnabled = YES;
 
     // Performance Tuning
